<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abu_area3</name>
  <version>0.0.0</version>
  <description>abu2024</description>
  <maintainer email="thipok17@gmail.com">Thipok Jiamjarapan</maintainer>
  <license>Apache-2.0</license>
  
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>ros2launch</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
